deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil
  labels:
    app: wil
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil
  template:
    metadata:
      labels:
        app: wil
    spec:
      containers:
      - name: wil
        image: wil42/playground:v2
        ports:
        - containerPort: 8888
          name: wil-port
